# cpp-sftp-adapter

./: .appveyor.yml  .codacy.yml  .gitattributes  .gitignore  .travis.yml  CLIUsage.md  CMakeLists.txt  LICENSE  ManualTestsReport.md  README.md  RELEASENOTES.md  SFTPAdapter.sln  SFTPClient.sln  conan-package.props  sonar-project.properties  windows_x86_vs15.conanprofile
.github/workflows/: archive-docs.yml
SFTPAdapterInterface/: IConnection.h  IExceptions.h  ISFTPClientAdapter.h  conanfile.py
SFTPAdapterTestUtilities/: CMakeLists.txt  conanfile.py  stdafx.h
SFTPAdapterTestUtilities/Mocks/: MockSFTPClientAdapter.cpp  MockSFTPClientAdapter.h
SFTPClient/: SFTPClient.vcxproj  conanfile.py  main.cpp  stdafx.cpp
SFTPClient/.conan/Release/: conanbuildinfo.props
SFTPClientCLI/: SFTPClientCLI.vcxproj  conanfile.py  main.cpp
SftpLibsshAdapter/: DLLImpExp.h  SFTPClient.cpp  SFTPClient.h  SFTPConnection.cpp  SFTPConnection.h  SftpLibsshAdapter.cppcheck  SftpLibsshAdapter.vcxproj  SftpLibsshAdapter.vcxproj.filters  conanfile.py  stdafx.cpp  stdafx.h
SftpLibsshAdapter/.conan/Debug/: conanbuildinfo.props
SftpLibsshAdapter/.conan/Release/: conanbuildinfo.props
SftpLibsshAdapterTest/: SftpLibsshAdapterTest.vcxproj  test.cpp
TestUtilities/mocks/: MockConnection.h  MockSFTPClientAdapter.h
ci/: deploy.sh
libssh/0.9.5/Release/: ssh.exp  ssh.lib
test_package/: CMakeLists.txt  SFTPClientAdapterExample.cpp  conanfile.py
